# traveling-tournament-problem-group-project

./: .gitignore  README.md  create_variables.ipynb  data_loader.py  exact_method.py  exact_method_fixed.py  experiments.py  infeasible.ilp  instance.py  pyproject.toml  simulated_annealing.py
.ipynb_checkpoints/: exact_method-checkpoint.py  main-checkpoint.py
instances/: NL4.xml  NL6.xml  NL8.xml
