[project]
name = "traveling-tournament-problem-group-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gurobipy>=12.0.3",
    "lxml>=6.0.2",
    "numpy>=2.3.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "notebook>=7.4.7",
]
